--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ h1 {
     font-weight: bold;
 }
 
+a {
+    text-decoration: none;
+    color: inheritף
+}
+
 .wrapper {
     max-width: 1280px;
     padding: 0 10px;
@@ -122,6 +127,8 @@ button {
     text-transform: capitalize;
     cursor: pointer;
     border: 1px solid transparent;
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 button:focus {
