--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ h1 {
     font-weight: bold;
 }
 
+h2, h3, h4, h5, h6 {
+    margin: 0 0 0.5rem 0;
+}
+
 a {
     text-decoration: none;
     color: inheritף
@@ -38,6 +42,14 @@ a {
     height: 100%;
 }
 
+.lucky-cat {
+    margin-bottom: 2rem;
+}
+
+.home-text {
+    margin-bottom: 2rem;
+}
+
 .box-center {
     padding: 2rem;
     text-align: center;
@@ -56,7 +68,8 @@ footer {
     font-size: 0.8em;
 }
 
-main {}
+main {
+}
 
 .main-container {
     padding: 10px 0;
@@ -119,6 +132,8 @@ main {}
 }
 
 button {
+    display: inline-flex;
+    align-items: stretch;
     background: rgba(255, 255, 255, 0.05);
     border: none;
     color: rgba(255, 255, 255, 0.8);
@@ -128,7 +143,6 @@ button {
     cursor: pointer;
     border: 1px solid transparent;
     margin-right: 0.5rem;
-    margin-bottom: 0.5rem;
 }
 
 button:focus {
@@ -138,6 +152,24 @@ button:focus {
 .glow-button:hover {
     color: rgba(255, 255, 255, 1);
     box-shadow: 0 0px 15px #f873a3;
+}
+
+.btn-icon:before {
+    background-size: 1.5em 1.5em;
+    background-position: center;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    content: "";
+    margin-right: 1em;
+}
+
+.btn-mail:before {
+    background-image: url('../img/mail.svg');
+}
+
+.btn-keep:before {
+    background-image: url('../img/lightbulb.svg');
 }
 
 /* Animations */
@@ -235,7 +267,3 @@ button:focus {
 }
 
 /* Misc */
-
-.lucky-cat {
-    margin-bottom: 2rem;
-}
