NEW: add new keep component

--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -1,5 +1,14 @@
 .keep-app {
     height: 100%;
+    padding: 10px 0;
+}
+
+.notes-add {
+    margin-bottom: 20px;
+}
+
+.notes-add-input {
+    width: 100%;
 }
 
 .note-card {
