--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@ a {
 
 header {
     position: relative;
+    justify-content: space-between;
+    align-items: center;
     height: 80px;
 }
 
@@ -68,8 +70,7 @@ footer {
     font-size: 0.8em;
 }
 
-main {
-}
+main {}
 
 .main-container {
     padding: 10px 0;
@@ -129,6 +130,20 @@ main {
 
 .heading-bullet:before {
     content: '▰'
+}
+
+input {
+    background: rgba(255, 255, 255, 0.05);
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 3px;
+    border: none;
+    font-size: 1rem;
+    color: #fff;
+}
+
+input:focus {
+    outline: 0;
 }
 
 button {
