--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -11,12 +11,20 @@
     width: 100%;
 }
 
+.notes-grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
+}
+
 .note-card {
     padding: 2rem;
     border: 1px solid #61daf5;
     border-radius: 3px;
     display: inline-block;
-    min-width: 200px;
-    margin-right: 0.8rem;
     background: rgba(255, 255, 255, 0.03);
+}
+
+.note-card-tools {
+    margin-top: 10px;
 }
