--- a/css/nav.css
+++ b/css/nav.css
@@ -12,6 +12,14 @@ nav a {
     margin: 0 .25em;
 }
 
+nav ul {
+    display: flex;
+}
+
+nav {
+    padding-right: 5px;
+}
+
 .skew-wrapper {
     width: 150px;
     height: 50px;
