--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,7 @@ h2, h3, h4, h5, h6 {
 
 /* Elements */
 
-main {
-}
+main {}
 
 header {
     position: relative;
@@ -45,6 +44,13 @@ a {
     color: inherit;
 }
 
+
+.router-link-active {
+    background-color: #f873a3;
+}
+
+
+
 input {
     background: rgba(255, 255, 255, 0.05);
     padding: 1rem;
@@ -63,6 +69,7 @@ input:focus {
 button {
     display: inline-flex;
     align-items: stretch;
+    justify-content: center;
     background: rgba(255, 255, 255, 0.05);
     color: rgba(255, 255, 255, 0.8);
     padding: 0.8rem 1.5rem;
@@ -125,6 +132,10 @@ button:focus {
 .home {
     height: 100%;
     transition-delay: 2s;
+}
+
+.home button {
+    min-width: 200px;
 }
 
 .lucky-cat {
@@ -229,17 +240,6 @@ button:focus {
 
 /* Animations */
 
-.fade-enter-active, .fade-leave-active {
-    transition: opacity .5s;
-}
-
-.fade-enter, .fade-leave-to
-/* .fade-leave-active below version 2.1.8 */
-
-    {
-    opacity: 0;
-}
-
 .ripple {
     background-position: center;
     transition: background 0.6s;
@@ -278,7 +278,7 @@ button:focus {
     animation-duration: 1s;
 }
 
-@keyframes fadeIn {
+@keyframes myFadeIn {
     from {
         opacity: 0;
     }
@@ -287,13 +287,13 @@ button:focus {
     }
 }
 
-.fade-in {
+.my-fade-in {
     opacity: 0;
     /* make things invisible upon start */
-    -webkit-animation: fadeIn ease-in 1;
+    -webkit-animation: myFadeIn ease-in 1;
     /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-    -moz-animation: fadeIn ease-in 1;
-    animation: fadeIn ease-in 1;
+    -moz-animation: myFadeIn ease-in 1;
+    animation: myFadeIn ease-in 1;
     -webkit-animation-fill-mode: forwards;
     /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
     -moz-animation-fill-mode: forwards;
