--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,13 @@ button:focus {
 
 /* Animations */
 
+.fade-enter-active  {
+    transition: opacity .3s;
+  }
+  .fade-enter /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+  }
+
 .ripple {
     background-position: center;
     transition: background 0.6s;
