--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -1,13 +1,16 @@
 .keep-app {
+    display: flex;
     height: 100%;
     padding: 10px 0;
+}
+
+.notes-list {
+    flex-grow: 2;
 }
 
 .notes-add {
     display: flex;
     flex-direction: column;
-    max-width: 480px;
-    margin: 0 auto 20px auto;
 }
 
 .notes-add-input {
@@ -24,9 +27,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 1rem;
     word-break: break-all;
-    border: 1px solid #666;
+    border: 1px solid #333;
     border-radius: 3px;
 }
 
