--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,11 @@ button:focus {
     content: '▰'
 }
 
+.glow-input:focus{
+    color: rgba(255, 255, 255, 1);
+    box-shadow: 0 0px 15px #fcb515;
+}
+
 .glow-button:hover {
     color: rgba(255, 255, 255, 1);
     box-shadow: 0 0px 15px #f873a3;
