Keep app layout gap

--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -20,6 +20,7 @@
 .notes-grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    padding-right: 20px;
     grid-gap: 20px;
 }
 
