--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,9 @@ a {
     color: inherit;
 }
 
-
 .router-link-active {
     background-color: #f873a3;
 }
-
-
 
 input {
     background: rgba(255, 255, 255, 0.05);
@@ -79,6 +76,7 @@ button {
     border: 1px solid transparent;
     border-radius: 3px;
     margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 button:focus {
@@ -193,7 +191,7 @@ button:focus {
     content: '▰'
 }
 
-.glow-input:focus{
+.glow-input:focus {
     color: rgba(255, 255, 255, 1);
     box-shadow: 0 0px 15px #fcb515;
 }
@@ -225,6 +223,10 @@ button:focus {
     height: 1.2em;
 }
 
+.btn-search:before {
+    background-image: url('../img/search.svg');
+}
+
 .btn-mail:before {
     background-image: url('../img/mail.svg');
 }
@@ -245,12 +247,16 @@ button:focus {
 
 /* Animations */
 
-.fade-enter-active  {
+.fade-enter-active, .fade-leave-active {
     transition: opacity .3s;
-  }
-  .fade-enter /* .fade-leave-active below version 2.1.8 */ {
+}
+
+.fade-enter, .fade-leave
+/* .fade-leave-active below version 2.1.8 */
+
+    {
     opacity: 0;
-  }
+}
 
 .ripple {
     background-position: center;
