--- a/css/nav.css
+++ b/css/nav.css
@@ -6,7 +6,7 @@ nav li {
     display: flex;
     justify-content: center;
     align-items: center;
-    height:50px;
+    height: 50px;
 }
 
 nav a {
@@ -29,12 +29,14 @@ nav .btn-icon:before {
 }
 
 .skew-wrapper {
-    width: 70px;
+    padding: 0 10px;
+    min-width: 70px;
     height: 50px;
     display: inline-block;
     transform: skew(-30deg);
     overflow: hidden;
     border-radius: 0px;
+    box-sizing: border-box;
 }
 
 .pink-filled {
