--- a/css/style.css
+++ b/css/style.css
@@ -175,12 +175,7 @@ button:focus {
     display: none;
 }
 
-.header-search {
-    flex-grow: 1;
-}
-
-.header-search-input {
-    width: 100%;
+.search-container li {
 }
 
 .lucky-cat {
