--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -7,7 +7,6 @@
 .notes-list {
     flex-grow: 2;
     /* overflow-y: scroll; */
-
 }
 
 .notes-add {
@@ -38,4 +37,18 @@
 
 .note-card-tools {
     margin-top: 10px;
+}
+
+input.btn-jscolor {
+    height: 0.5em;
+    width: 0.5em;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.btn-jscolor {
+    height: 0.5em;
+    width: 0.5em;
+    border-radius: 50%;
+    cursor: pointer;
 }
