--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 ::-webkit-scrollbar {
     width: 10px;
-    border-radius:50%;
+    border-radius: 50%;
 }
 
 /* Track */
@@ -19,7 +19,6 @@
 
 ::-webkit-scrollbar-thumb {
     background: #333;
-    
 }
 
 /* Handle on hover */
@@ -27,7 +26,6 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #888;
     cursor: pointer;
-
 }
 
 body {
@@ -79,7 +77,7 @@ a {
 }
 
 input {
-    background: rgba(255, 255, 255, 0.05);
+    background: #272727;
     padding: 1rem;
     box-sizing: border-box;
     border-radius: 3px;
@@ -205,7 +203,17 @@ button:focus {
     display: none;
 }
 
-.search-container li {}
+.search-container {
+    background: #272727;
+}
+
+.search-container:hover {
+    background: #272727;
+}
+
+.search-container input:focus {
+    outline: none;
+}
 
 .lucky-cat {
     max-width: 180px;
