--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,9 @@ h2, h3, h4, h5, h6 {
 
 main {
     height: calc(100vh - 160px);
-    margin: 10px 0;
-    padding: 10px 0;
     box-sizing: border-box;
+    margin: 0.5px 0;
+    padding: 20px 0;
     overflow-y: scroll;
 }
 
@@ -271,6 +271,10 @@ button:focus {
 
 .btn-trash:before {
     background-image: url('../img/trash.svg');
+}
+
+.btn-duplicate:before {
+    background-image: url('../img/duplicate.svg');
 }
 
 /* Helpers */
