--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ button:focus {
 
 .search-container {
     background: #272727;
+    border-color: #fcb515;
 }
 
 .search-container:hover {
@@ -230,6 +231,10 @@ button:focus {
     box-shadow: 0 0px 15px #fcb515;
 }
 
+.glow-search-container {
+    box-shadow: 0 0px 15px #fcb515;
+}
+
 .glow-button:hover {
     color: rgba(255, 255, 255, 1);
     box-shadow: 0 0px 15px #f873a3;
@@ -248,6 +253,11 @@ button:focus {
 .btn-tool {
     background: transparent;
     padding: 0;
+    filter: invert(0.6);
+}
+
+.btn-tool:hover {
+    filter: invert(0);
 }
 
 .btn-tool:before {
