--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -7,6 +7,7 @@
     padding: 10px 10px;
     display: flex;
     flex-direction: column;
+    align-self: baseline;
     background-color: rgba(255, 255, 255, 0.02);
     border-radius: 5px;
     margin: 0 10px;
@@ -19,6 +20,7 @@
     }
     .notes-add {
         margin-bottom: 20px;
+        align-self: stretch;
     }
 }
 
