--- a/css/nav.css
+++ b/css/nav.css
@@ -18,9 +18,11 @@ nav a {
 
 nav ul {
     display: flex;
+    justify-content: flex-end;
 }
 
 nav {
+    flex-grow: 1;
     padding-right: 4px;
 }
 
