--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -33,15 +33,6 @@
     padding: 10px 0 0 0;
 }
 
-.add-note-video-preview {
-    padding: 10px 0 0 0;
-}
-
-.add-note-video-preview iframe {
-    width: 100%;
-    max-height: 250px;
-}
-
 .add-note-img-preview img {
     max-width: 100%;
 }
@@ -60,7 +51,7 @@
 
 .notes-grid-container {
     column-count: 3;
-    column-gap: 1em;
+    column-gap: 20px;
     margin-bottom: 20px;
 }
 
@@ -106,9 +97,24 @@
     border: 1px solid #61daf5;
 }
 
+.note-card-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.note-card-media-container {
+    font-size: 0;
+    border-bottom: 1px solid #333;
+}
+
 .note-card-text {
     padding: 1rem;
     word-break: break-all;
+    border-bottom: 1px solid #333;
+}
+
+.note-card-img-container {
+    font-size: 0;
 }
 
 .note-card-img {
@@ -120,9 +126,9 @@
 }
 
 .note-card-tools {
-    padding: 1rem;
     display: flex;
     justify-content: space-between;
+    padding: 1rem;
 }
 
 button.btn-icon.btn-tool.btn-pin {
