--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -15,8 +15,7 @@
 
 @media(max-width:768px) {
     .keep-app {
-        flex-direction: column;
-        flex-flow: column-reverse;
+        flex-direction: column-reverse;
     }
     .notes-add {
         margin-bottom: 20px;
@@ -29,12 +28,17 @@
     /* overflow-y: scroll; */
 }
 
-.add-note-img-preview {
+.add-note-preview {
     padding: 10px 0 0 0;
 }
 
-.add-note-img-preview img {
-    max-width: 100%;
+.add-note-preview img {
+    max-width: 100%
+}
+
+.add-note-preview iframe {
+    width: 100%;
+    height: 300px;
 }
 
 .notes-add-input {
@@ -128,6 +132,7 @@
 .note-card-tools {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem;
 }
 
@@ -138,28 +143,30 @@ button.btn-icon.btn-tool.btn-pin {
     justify-content: flex-end;
 }
 
-.btn-jscolor {
-    height: 5px;
-    width: 5px;
+.color-picker {
+    width: 20px;
+    height: 20px;
+}
+
+.color-picker-btn {
+    width: 1em;
+    height: 1em;
     border-radius: 50%;
+    border: 1px solid #666;
     cursor: pointer;
 }
 
-.btn-jscolor:focus {
-    border: 0;
-    outline: 0;
+.color-picker-menu {
+    z-index: 3;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #333;
+    background: #333;
+    position: absolute;
+    display: flex;
+    transform: translateX(-50%);
 }
 
-.btn-jscolor {
-    height: 0.5em;
-    width: 0.5em;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.color-value {
-    width: 19px;
-    height: 19px;
-    float: left;
-    display: block;
+.color-picker-option {
+    margin: 0 0.5em;
 }
