--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -1,25 +1,24 @@
 .keep-app {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
 }
 
 .notes-add {
+    width: 50%;
     padding: 10px 10px;
     display: flex;
     flex-direction: column;
-    align-self: baseline;
     background-color: rgba(255, 255, 255, 0.02);
     border-radius: 5px;
-    margin: 0 10px;
 }
 
 @media(max-width:768px) {
-    .keep-app {
-        flex-direction: column-reverse;
-    }
     .notes-add {
         margin-bottom: 20px;
         align-self: stretch;
+        width: 100%;
+        padding: 0;
     }
 }
 
@@ -80,7 +79,7 @@
 
 @media (max-width: 540px) {
     .notes-grid-container {
-        column-count: 2;
+        column-count: 1;
     }
 }
 
