--- a/css/keep-app.css
+++ b/css/keep-app.css
@@ -29,10 +29,13 @@
 
 .add-note-preview {
     padding: 10px 0 0 0;
+    text-align: center;
+    max-height: 300px;
 }
 
 .add-note-preview img {
-    max-width: 100%
+    max-width: 100%;
+    height: 300px;
 }
 
 .add-note-preview iframe {
